# saiblo-worker

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  agent_code_fetcher.py  aiohttp_session_manager.py  base_agent_code_fetcher.py  base_build_result_reporter.py  base_builder.py  base_compile_result_sender.py  base_docker_image_builder.py  base_judger.py  base_match_judger.py  base_match_result_reporter.py  base_saiblo_client.py  base_task.py  base_task_scheduler.py  build_result_reporter.py  build_task.py  compile_task.py  docker_image_builder.py  entrypoint.sh  judge_task.py  main.py  match_judger.py  match_result.py  match_result_reporter.py  path_manager.py  pylintrc.toml  pyproject.toml  requirements.txt  saiblo_client.py  task_scheduler.py  thuai_builder.py  thuai_cr_sender.py  thuai_fetcher.py  thuai_judger.py  thuai_reporter.py  thuai_task_scheduler.py  (+1 more)
.github/: dependabot.yml  pull_request_template.md
saiblo_worker/: agent_code_fetcher.py  base_build_result_reporter.py  base_docker_image_builder.py  base_match_judger.py  base_match_result_reporter.py  base_saiblo_client.py  base_task.py  base_task_scheduler.py  build_result.py  build_result_reporter.py  build_task.py  docker_image_builder.py  judge_task.py  match_judger.py  match_result.py  match_result_reporter.py  path_manager.py  saiblo_client.py  task_scheduler.py
tests/: test_agent_code_fetcher.py  test_build_result_reporter.py  test_build_task.py  test_docker_image_builder.py  test_judge_task.py  test_match_judger.py  test_match_result_reporter.py  test_path_manager.py  (+1 more)
(+8 files in other folders)
